--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <a heaf="">
+    <a heaf="/">
         <img src="./Image/berry.svg" alt="">
        Сладкий сундук
     </a>
