--- a/index.html
+++ b/index.html
@@ -2,15 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
 <body>
 <header>
-    <a heaf="/">
+<nav>
+    <a href="/">
         <img src="./Image/berry.svg" alt="">
        Сладкий сундук
     </a>
+
+    <ul>
+        <li><a href="">Features</a></li>
+        <li><a href="">Prricing</a></li>
+        <li><a href="">Community</a></li>
+        <li><a href="">Support</a></li>    
+    </ul>
+
+    <ul>
+        <li><a href="">Log in</a></li>
+        <li><a href="">Register</a></li>
+    </nav>
+    </ul>
 </header>
+
+<div>
+    <section>
+        <h1>The larges comunity of photo enthusiast</h1>
+        <a href="">Join today</a>
+    </section>
+</div>
+
+<section>
+    <h2>Snap photos and share like <br /> never before</h2>
+
+    <ul>
+        <li>
+            <h3>Sed ut perspiciatis</h3>
+            <p>Snap photos and share like never beforeSnap photos and share like never 
+                beforeSnap photos and share like never beforeSnap photos and sha
+                re like never beforeSnap photos and share like never beforeSnap photos a
+                nd share like never beforeSnap photos and share like never beforeSnap photos and share like never 
+                before</p>
+                <a href="">Learn more</a>
+        </li>
+        <li>
+            <h3>Sed ut perspiciatis</h3>
+            <p>Snap photos and share like never beforeSnap photos and share like never 
+                beforeSnap photos and share like never beforeSnap photos and sha
+                re like never beforeSnap photos and share like never beforeSnap photos a
+                nd share like never beforeSnap photos and share like never beforeSnap photos and share like never 
+                before</p>
+                <a href="">Learn more</a>
+        </li>
+        <li>
+            <h3>Sed ut perspiciatis</h3>
+            <p>Snap photos and share like never beforeSnap photos and share like never 
+                beforeSnap photos and share like never beforeSnap photos and sha
+                re like never beforeSnap photos and share like never beforeSnap photos a
+                nd share like never beforeSnap photos and share like never beforeSnap photos and share like never 
+                before</p>
+                <a href="">Learn more</a>
+        </li>
+        <li>
+            <h3>Sed ut perspiciatis</h3>
+            <p>Snap photos and share like never beforeSnap photos and share like never 
+                beforeSnap photos and share like never beforeSnap photos and sha
+                re like never beforeSnap photos and share like never beforeSnap photos a
+                nd share like never beforeSnap photos and share like never beforeSnap photos and share like never 
+                before</p>
+                <a href="">Learn more</a>
+        </li>
+    </ul>
+</section>
 </body>
 </html>
