--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+   <!---- Шапка сайт -->
 <header>
 <nav>
     <a href="/">
@@ -27,6 +28,7 @@
     </ul>
 </header>
 
+<!---- Герой -->
 <div>
     <section>
         <h1>The larges comunity of photo enthusiast</h1>
@@ -34,6 +36,7 @@
     </section>
 </div>
 
+<!---- Преймущества -->
 <section>
     <h2>Snap photos and share like <br /> never before</h2>
 
@@ -77,8 +80,39 @@
     </ul>
 </section>
 
+<!---- Примеры работ -->
 <section>
     <h2>Примеры работ</h2>
+
+    <ul>
+    <li>
+        <img src="./Image/Галерея.png" alt="" width="750">
+        <h3>Sed ut perspiciatis unde omis</h3>
+        <p>nap photos and share like never
+             beforenap photos
+             and share like never beforenap 
+             photos and sharelike never befor 
+            </p>
+    </li>
+    <li>
+        <img src="./Image/Галерея.png" alt="" width="750">
+        <h3>Sed ut perspiciatis unde omis</h3>
+        <p>nap photos and share like never
+             beforenap photos
+             and share like never beforenap 
+             photos and sharelike never befor 
+            </p>
+    </li>
+    </ul>
+</section>
+
+<!---- Testimotial -->
+<section>
+    <h2>Yo`re in good company</h2>
+    <p>nap photos and share 
+        like never beforenap photos and s
+        are like never beforenap photos and share like never befor
+    </p>
 </section>
 </body>
 </html>
