--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 <nav>
     <a href="/">
-        <img src="./Image/berry.svg" alt="">
+        <img src="./Image/berry.svg" alt="логотип компании">
        Сладкий сундук
     </a>
 
@@ -18,7 +18,7 @@
         <li><a href="">Features</a></li>
         <li><a href="">Prricing</a></li>
         <li><a href="">Community</a></li>
-        <li><a href="">Support</a></li>    
+        <li><a href="/support.html">Support</a></li>    
     </ul>
 
     <ul>
@@ -27,14 +27,14 @@
     </nav>
     </ul>
 </header>
-
+<main>
 <!---- Герой -->
-<div>
+<div> не нужно
     <section>
         <h1>The larges comunity of photo enthusiast</h1>
         <a href="">Join today</a>
     </section>
-</div>
+</div> не нужно
 
 <!---- Преймущества -->
 <section>
@@ -86,7 +86,7 @@
 
     <ul>
     <li>
-        <img src="./Image/Галерея.png" alt="" width="750">
+        <img src="./Image/Галерея.png" alt="зимний лес" width="750">
         <h3>Sed ut perspiciatis unde omis</h3>
         <p>nap photos and share like never
              beforenap photos
@@ -95,7 +95,7 @@
             </p>
     </li>
     <li>
-        <img src="./Image/Галерея.png" alt="" width="750">
+        <img src="./Image/Галерея.png" alt="весенний лес" width="750">
         <h3>Sed ut perspiciatis unde omis</h3>
         <p>nap photos and share like never
              beforenap photos
@@ -113,6 +113,38 @@
         like never beforenap photos and s
         are like never beforenap photos and share like never befor
     </p>
+
+     <ul>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+        <li>
+            <a href=""><img src="./Image/Горизонтальная форма.png" alt="Логотип компании" /></a>
+        </li>
+     </ul>
 </section>
+</main>
+<!---- Футер -->
+<footer>
+    Футер
+</footer>
 </body>
 </html>
