--- a/2index.html
+++ b/2index.html
@@ -330,6 +330,6 @@
   </body>
 </html>
 
-<img src="./images/Marta.png" alt="Фото Sergey Kolienko" />
+<img src="./images.png" alt="Фото Sergey Kolienko" />
 <h3 lang="en">Sergey Kolienko</h3>
 <p lang="en">Frontend Developer</p>
