--- a/Textmarkupindex.html
+++ b/Textmarkupindex.html
@@ -92,5 +92,6 @@
       </p>
       <!-- Теги <em> и <i> -->
         <p>Я <em>в полном восторге</em> когда задерживают зарплату!</p>
+        <!-- Есть официальная страница W3C https://html.spec.whatwg.org/multipage/named-characters.html  и сервис от Toptal https://www.toptal.com/designers/htmlarrows/symbols/, где можно найти мнемонику для любого символа. -->
 </body>
 </html>
